{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 107,
  "lineage": "167a66d8-6a37-a0e6-0977-a352b4735c81",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216500957010:loadbalancer/app/tp1-alb/5b544ef33eabb47d",
            "arn_suffix": "app/tp1-alb/5b544ef33eabb47d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tp1-alb-1280675287.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:216500957010:loadbalancer/app/tp1-alb/5b544ef33eabb47d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tp1-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ddf6eb489bd860e4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0292e0f7aa3f4ff03"
              },
              {
                "subnet_id": "subnet-0550ed76239fd5d09"
              }
            ],
            "subnets": [
              "subnet-0292e0f7aa3f4ff03",
              "subnet-0550ed76239fd5d09"
            ],
            "tags": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "tp1-alb",
              "Project": "TP1"
            },
            "tags_all": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "tp1-alb",
              "Project": "TP1"
            },
            "vpc_id": "vpc-049f771991f8f6297",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216500957010:listener/app/tp1-alb/5b544ef33eabb47d/5b0f3a932e7cfa46",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:216500957010:targetgroup/tp1-tg/ca7128b7cd5c433f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216500957010:listener/app/tp1-alb/5b544ef33eabb47d/5b0f3a932e7cfa46",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:216500957010:loadbalancer/app/tp1-alb/5b544ef33eabb47d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216500957010:targetgroup/tp1-tg/ca7128b7cd5c433f",
            "arn_suffix": "targetgroup/tp1-tg/ca7128b7cd5c433f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216500957010:targetgroup/tp1-tg/ca7128b7cd5c433f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tp1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "tp1-tg",
              "Project": "TP1"
            },
            "tags_all": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "alb",
              "Name": "tp1-tg",
              "Project": "TP1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:216500957010:instance/i-09aa2c247bfc94327",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09aa2c247bfc94327",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2e96a1185b0c407",
            "private_dns": "ip-10-10-3-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d17f96aceac3b5b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b20254fab3d9a366",
            "tags": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "compute-ec2",
              "Name": "tp1-web-private-a",
              "Project": "TP1"
            },
            "tags_all": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "compute-ec2",
              "Name": "tp1-web-private-a",
              "Project": "TP1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0270f94069a3ab1ea"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.web"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:216500957010:instance/i-0eb47a4548851acbc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb47a4548851acbc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c8a5328547e6d2e6",
            "private_dns": "ip-10-10-4-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.4.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0080d8d09c27202b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c9c895dc20df027",
            "tags": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "compute-ec2",
              "Name": "tp1-web-private-b",
              "Project": "TP1"
            },
            "tags_all": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "compute-ec2",
              "Name": "tp1-web-private-b",
              "Project": "TP1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0270f94069a3ab1ea"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:216500957010:targetgroup/tp1-tg/ca7128b7cd5c433f-20260223102434072400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:216500957010:targetgroup/tp1-tg/ca7128b7cd5c433f",
            "target_id": "i-09aa2c247bfc94327"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.this",
            "module.compute.aws_instance.web",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.web"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:216500957010:targetgroup/tp1-tg/ca7128b7cd5c433f-20260223102434055300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:216500957010:targetgroup/tp1-tg/ca7128b7cd5c433f",
            "target_id": "i-0eb47a4548851acbc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.this",
            "module.compute.aws_instance.web",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b2e39ef9e86a879",
            "arn": "arn:aws:ec2:us-east-1:216500957010:elastic-ip/eipalloc-04b2e39ef9e86a879",
            "association_id": "eipassoc-015399bc94f2a6db7",
            "domain": "vpc",
            "id": "eipalloc-04b2e39ef9e86a879",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a6205718a8758db3",
            "private_dns": "ip-10-10-1-18.ec2.internal",
            "private_ip": "10.10.1.18",
            "public_dns": "ec2-3-234-26-146.compute-1.amazonaws.com",
            "public_ip": "3.234.26.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-main-eip"
            },
            "tags_all": {
              "Name": "nat-main-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b2e39ef9e86a879",
            "association_id": "eipassoc-015399bc94f2a6db7",
            "connectivity_type": "public",
            "id": "nat-03e4f7ca586035196",
            "network_interface_id": "eni-0a6205718a8758db3",
            "private_ip": "10.10.1.18",
            "public_ip": "3.234.26.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0292e0f7aa3f4ff03",
            "tags": {
              "Name": "nat-main"
            },
            "tags_all": {
              "Name": "nat-main"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:subnet/subnet-0b20254fab3d9a366",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b20254fab3d9a366",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216500957010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-a"
            },
            "tags_all": {
              "Name": "private-a"
            },
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:subnet/subnet-03c9c895dc20df027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c9c895dc20df027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216500957010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-b"
            },
            "tags_all": {
              "Name": "private-b"
            },
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:subnet/subnet-0292e0f7aa3f4ff03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0292e0f7aa3f4ff03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216500957010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:subnet/subnet-0550ed76239fd5d09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0550ed76239fd5d09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216500957010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-b"
            },
            "tags_all": {
              "Name": "public-b"
            },
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:vpc/vpc-049f771991f8f6297",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03be4c3566d237e26",
            "default_route_table_id": "rtb-043d65992f19d9f2b",
            "default_security_group_id": "sg-00af294b669d428cf",
            "dhcp_options_id": "dopt-052aa67860e846487",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049f771991f8f6297",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-043d65992f19d9f2b",
            "owner_id": "216500957010",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.routing_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:route-table/rtb-05059a0e29117b886",
            "id": "rtb-05059a0e29117b886",
            "owner_id": "216500957010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03e4f7ca586035196",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private"
            },
            "tags_all": {
              "Name": "rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.routing_private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb81e916dae5f9cc",
            "route_table_id": "rtb-05059a0e29117b886",
            "subnet_id": "subnet-0b20254fab3d9a366"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.routing_private.aws_route_table.private"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e1120a597087180",
            "route_table_id": "rtb-05059a0e29117b886",
            "subnet_id": "subnet-03c9c895dc20df027"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.this",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.routing_private.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.routing_public",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:internet-gateway/igw-06632d48016435985",
            "id": "igw-06632d48016435985",
            "owner_id": "216500957010",
            "tags": {
              "Name": "igw-main"
            },
            "tags_all": {
              "Name": "igw-main"
            },
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.routing_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:route-table/rtb-01acfbe65dea2c423",
            "id": "rtb-01acfbe65dea2c423",
            "owner_id": "216500957010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06632d48016435985",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public"
            },
            "tags_all": {
              "Name": "rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.routing_public.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.routing_public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bddc0cef6827d5c",
            "route_table_id": "rtb-01acfbe65dea2c423",
            "subnet_id": "subnet-0292e0f7aa3f4ff03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.routing_public.aws_internet_gateway.this",
            "module.routing_public.aws_route_table.public"
          ]
        },
        {
          "index_key": "public-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f0ca0e80117fab3",
            "route_table_id": "rtb-01acfbe65dea2c423",
            "subnet_id": "subnet-0550ed76239fd5d09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.routing_public.aws_internet_gateway.this",
            "module.routing_public.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:security-group/sg-0ddf6eb489bd860e4",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddf6eb489bd860e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP 443 to ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP 80 to ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tp1-sg-alb",
            "name_prefix": "",
            "owner_id": "216500957010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "security-groups",
              "Name": "tp1-sg-alb",
              "Project": "TP1"
            },
            "tags_all": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "security-groups",
              "Name": "tp1-sg-alb",
              "Project": "TP1"
            },
            "timeouts": null,
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216500957010:security-group/sg-0270f94069a3ab1ea",
            "description": "WEB instances security group (only reachable from ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0270f94069a3ab1ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow WEB port from ALB SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ddf6eb489bd860e4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tp1-sg-web",
            "name_prefix": "",
            "owner_id": "216500957010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "security-groups",
              "Name": "tp1-sg-web",
              "Project": "TP1"
            },
            "tags_all": {
              "Env": "lab",
              "ManagedBy": "terraform",
              "Module": "security-groups",
              "Name": "tp1-sg-web",
              "Project": "TP1"
            },
            "timeouts": null,
            "vpc_id": "vpc-049f771991f8f6297"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow TCP 443 to ALB",
            "from_port": 443,
            "id": "sgrule-1361319943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ddf6eb489bd860e4",
            "security_group_rule_id": "sgr-0a25e05fd9bcf0c79",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow TCP 80 to ALB",
            "from_port": 80,
            "id": "sgrule-2641449560",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ddf6eb489bd860e4",
            "security_group_rule_id": "sgr-0220637104ddd5a67",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ingress_from_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow WEB port from ALB SG",
            "from_port": 80,
            "id": "sgrule-3048019774",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0270f94069a3ab1ea",
            "security_group_rule_id": "sgr-0ff2e4b06422c2cc7",
            "self": false,
            "source_security_group_id": "sg-0ddf6eb489bd860e4",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.web"
          ]
        }
      ]
    }
  ]
}